--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "date-fns": "^2.16.1",
+    "date-fns-tz": "^1.0.12",
     "next": "9.5.5",
     "react": "16.14.0",
     "react-dom": "16.14.0"
